--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/eminence_chitty
 spring.datasource.username=root
 
-spring.datasource.password=sreeni7799
+spring.datasource.password=anagha
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
