--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/eminence_chitty
 spring.datasource.username=root
 
-spring.datasource.password=admin
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
@@ -15,5 +13,8 @@ spring.data.rest.base-path=/api
 #file config
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#jasypt
+
 
 
