--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eminence_chitty
 spring.datasource.username=root
-#spring.datasource.password=sreeni7799
+spring.datasource.password=sreeni7799
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
